--- a/assets/Cargo.toml
+++ b/assets/Cargo.toml
@@ -11,4 +11,4 @@ edition = "2018"
 [build-dependencies]
 image = "0.22"
 ron = { git = "https://github.com/ron-rs/ron.git" }
-amethyst = { path = "../../amethyst", default-features = false, features = ["nightly", "animation", "audio", "locale", "renderer", "saveload", "vulkan", "gltf", "experimental-spirv-reflection", "shader-compiler", "tiles"] }
+amethyst = { path = "../../amethyst", default-features = false, features = ["legion-ecs", "nightly", "animation", "audio", "locale", "renderer", "vulkan", "gltf", "experimental-spirv-reflection", "shader-compiler", "tiles"] }
